crates/ruff_python_parser/tests/snapshots/invalid_syntax@lambda_body_with_starred_expr.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/lambda_body_with_starred_expr.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..62,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 0..12,
                    value: Lambda(
                        ExprLambda {
                            node_index: NodeIndex(None),
                            range: 0..12,
                            parameters: Some(
                                Parameters {
                                    range: 7..8,
                                    node_index: NodeIndex(None),
                                    posonlyargs: [],
                                    args: [
                                        ParameterWithDefault {
                                            range: 7..8,
                                            node_index: NodeIndex(None),
                                            parameter: Parameter {
                                                range: 7..8,
                                                node_index: NodeIndex(None),
                                                name: Identifier {
                                                    id: Name("x"),
                                                    range: 7..8,
                                                    node_index: NodeIndex(None),
                                                },
                                                pattern: None,
                                                annotation: None,
                                                is_context: false,
                                                is_some: false,
                                            },
                                            default: None,
                                        },
                                    ],
                                    vararg: None,
                                    kwonlyargs: [],
                                    kwarg: None,
                                },
                            ),
                            returns: None,
                            body: Starred(
                                ExprStarred {
                                    node_index: NodeIndex(None),
                                    range: 10..12,
                                    value: Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 11..12,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 13..26,
                    value: Tuple(
                        ExprTuple {
                            node_index: NodeIndex(None),
                            range: 13..26,
                            elts: [
                                Lambda(
                                    ExprLambda {
                                        node_index: NodeIndex(None),
                                        range: 13..25,
                                        parameters: Some(
                                            Parameters {
                                                range: 20..21,
                                                node_index: NodeIndex(None),
                                                posonlyargs: [],
                                                args: [
                                                    ParameterWithDefault {
                                                        range: 20..21,
                                                        node_index: NodeIndex(None),
                                                        parameter: Parameter {
                                                            range: 20..21,
                                                            node_index: NodeIndex(None),
                                                            name: Identifier {
                                                                id: Name("x"),
                                                                range: 20..21,
                                                                node_index: NodeIndex(None),
                                                            },
                                                            pattern: None,
                                                            annotation: None,
                                                            is_context: false,
                                                            is_some: false,
                                                        },
                                                        default: None,
                                                    },
                                                ],
                                                vararg: None,
                                                kwonlyargs: [],
                                                kwarg: None,
                                            },
                                        ),
                                        returns: None,
                                        body: Starred(
                                            ExprStarred {
                                                node_index: NodeIndex(None),
                                                range: 23..25,
                                                value: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 24..25,
                                                        id: Name("y"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: false,
                            is_anon_named_tuple: false,
                            is_anon_named_tuple_value: false,
                            callable_shape: None,
                            is_parameter_shape: false,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 27..42,
                    value: Tuple(
                        ExprTuple {
                            node_index: NodeIndex(None),
                            range: 27..42,
                            elts: [
                                Lambda(
                                    ExprLambda {
                                        node_index: NodeIndex(None),
                                        range: 27..39,
                                        parameters: Some(
                                            Parameters {
                                                range: 34..35,
                                                node_index: NodeIndex(None),
                                                posonlyargs: [],
                                                args: [
                                                    ParameterWithDefault {
                                                        range: 34..35,
                                                        node_index: NodeIndex(None),
                                                        parameter: Parameter {
                                                            range: 34..35,
                                                            node_index: NodeIndex(None),
                                                            name: Identifier {
                                                                id: Name("x"),
                                                                range: 34..35,
                                                                node_index: NodeIndex(None),
                                                            },
                                                            pattern: None,
                                                            annotation: None,
                                                            is_context: false,
                                                            is_some: false,
                                                        },
                                                        default: None,
                                                    },
                                                ],
                                                vararg: None,
                                                kwonlyargs: [],
                                                kwarg: None,
                                            },
                                        ),
                                        returns: None,
                                        body: Starred(
                                            ExprStarred {
                                                node_index: NodeIndex(None),
                                                range: 37..39,
                                                value: Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 38..39,
                                                        id: Name("y"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                ctx: Load,
                                            },
                                        ),
                                    },
                                ),
                                Name(
                                    ExprName {
                                        node_index: NodeIndex(None),
                                        range: 41..42,
                                        id: Name("z"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: false,
                            is_anon_named_tuple: false,
                            is_anon_named_tuple_value: false,
                            callable_shape: None,
                            is_parameter_shape: false,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 43..61,
                    value: Lambda(
                        ExprLambda {
                            node_index: NodeIndex(None),
                            range: 43..61,
                            parameters: Some(
                                Parameters {
                                    range: 50..51,
                                    node_index: NodeIndex(None),
                                    posonlyargs: [],
                                    args: [
                                        ParameterWithDefault {
                                            range: 50..51,
                                            node_index: NodeIndex(None),
                                            parameter: Parameter {
                                                range: 50..51,
                                                node_index: NodeIndex(None),
                                                name: Identifier {
                                                    id: Name("x"),
                                                    range: 50..51,
                                                    node_index: NodeIndex(None),
                                                },
                                                pattern: None,
                                                annotation: None,
                                                is_context: false,
                                                is_some: false,
                                            },
                                            default: None,
                                        },
                                    ],
                                    vararg: None,
                                    kwonlyargs: [],
                                    kwarg: None,
                                },
                            ),
                            returns: None,
                            body: Starred(
                                ExprStarred {
                                    node_index: NodeIndex(None),
                                    range: 53..61,
                                    value: BoolOp(
                                        ExprBoolOp {
                                            node_index: NodeIndex(None),
                                            range: 54..61,
                                            op: And,
                                            values: [
                                                Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 54..55,
                                                        id: Name("y"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                Name(
                                                    ExprName {
                                                        node_index: NodeIndex(None),
                                                        range: 60..61,
                                                        id: Name("z"),
                                                        ctx: Load,
                                                    },
                                                ),
                                            ],
                                        },
                                    ),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | lambda x: *y
  |           ^^ Syntax Error: Starred expression cannot be used here
2 | lambda x: *y,
3 | lambda x: *y, z
  |


  |
1 | lambda x: *y
2 | lambda x: *y,
  |           ^^ Syntax Error: Starred expression cannot be used here
3 | lambda x: *y, z
4 | lambda x: *y and z
  |


  |
1 | lambda x: *y
2 | lambda x: *y,
3 | lambda x: *y, z
  |           ^^ Syntax Error: Starred expression cannot be used here
4 | lambda x: *y and z
  |


  |
2 | lambda x: *y,
3 | lambda x: *y, z
4 | lambda x: *y and z
  |           ^^^^^^^^ Syntax Error: Starred expression cannot be used here
